[gd_scene load_steps=11 format=2]

[ext_resource path="res://Objects/Entity.tscn" type="PackedScene" id=1]
[ext_resource path="res://Sprites/Objects/m.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Objects/c.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Objects/y.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Objects/r.png" type="Texture" id=5]
[ext_resource path="res://Sprites/Objects/g.png" type="Texture" id=6]
[ext_resource path="res://Sprites/Objects/b.png" type="Texture" id=7]
[ext_resource path="res://Objects/ColorCircles/b.gd" type="Script" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 3 ), ExtResource( 6 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[node name="b" instance=ExtResource( 1 )]
script = ExtResource( 8 )

[node name="CollisionShape2D" parent="." index="0"]
shape = SubResource( 1 )

[node name="AnimatedSprite" parent="." index="1"]
frames = SubResource( 2 )
frame = 1
[connection signal="body_entered" from="." to="." method="_on_b_body_entered"]
[connection signal="mouse_entered" from="." to="." method="_on_b_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_b_mouse_exited"]
